<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_detail"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/detail_image"
        app:layout_constraintEnd_toEndOf="@+id/detail_image"
        app:layout_constraintStart_toStartOf="@+id/detail_image"
        app:layout_constraintTop_toTopOf="@+id/detail_image" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_image"
        android:layout_width="102dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        android:contentDescription="@string/username" />

    <TextView
        android:id="@+id/username"
        android:layout_width="234dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/company"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/detail_image"
        app:layout_constraintTop_toTopOf="@+id/detail_image"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_company"
        app:layout_constraintBottom_toBottomOf="@+id/company"
        app:layout_constraintStart_toStartOf="@+id/full_name"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:contentDescription="@string/company" />

    <TextView
        android:id="@+id/company"
        android:layout_width="233dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:text="@string/company"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/detail_location"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/detail_location"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/location" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="230dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/company" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/followers"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_image"
        app:layout_constraintTop_toBottomOf="@+id/detail_location" />

    <TextView
        android:id="@+id/detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/detail_location"
        app:layout_constraintVertical_bias="1.0"
        android:text="@string/value" />

    <View
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:background="@color/gray_dark"
        app:layout_constraintBottom_toBottomOf="@+id/detail_followers"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/detail_followers"
        app:layout_constraintTop_toTopOf="@+id/detail_followers" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/following"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/detail_followers"
        app:layout_constraintStart_toEndOf="@+id/detail_followers"
        app:layout_constraintTop_toTopOf="@+id/detail_followers" />

    <TextView
        android:id="@+id/detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.666"
        android:text="@string/value" />

    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/value" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repos"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/repository" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail_following"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"/>

    <ToggleButton
        android:id="@+id/fav_toggle"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/fav_user_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="@+id/detail_image"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/detail_image"
        app:layout_constraintTop_toBottomOf="@+id/detail_image" />

</androidx.constraintlayout.widget.ConstraintLayout>